# serializer version: 1
# name: TestFinalize.test_quality
  dict({
    'all_read': True,
    'all_write': False,
    'created_at': '2015-10-06T20:00:00Z',
    'format': 'fastq',
    'group': None,
    'group_read': True,
    'group_write': False,
    'hold': True,
    'host': '',
    'id': 1,
    'is_legacy': False,
    'isolate': '',
    'job': dict({
      'created_at': '2015-10-06T20:00:00Z',
      'id': 1,
      'progress': 0,
      'state': 'pending',
      'user': dict({
        'handle': 'leeashley',
        'id': 1,
      }),
      'workflow': 'create_sample',
    }),
    'labels': list([
    ]),
    'library_type': 'normal',
    'locale': '',
    'name': 'Result',
    'notes': '',
    'nuvs': False,
    'paired': False,
    'pathoscope': False,
    'quality': dict({
      'bases': list([
        list([
          1543,
        ]),
      ]),
      'composition': list([
        list([
          6372,
        ]),
      ]),
      'count': 7069,
      'encoding': 'OuBQPPuwYimrxkNpPWUx',
      'gc': 34222440,
      'length': list([
        3237,
      ]),
      'sequences': list([
        7091,
      ]),
    }),
    'reads': list([
    ]),
    'ready': True,
    'subtractions': list([
    ]),
    'uploads': list([
      dict({
        'created_at': '2015-10-06T20:00:00Z',
        'id': 1,
        'name': 'test.fq.gz',
        'ready': True,
        'removed': True,
        'removed_at': '2015-10-06T20:00:00Z',
        'reserved': True,
        'size': 723988,
        'type': 'reads',
        'uploaded_at': '2015-10-06T20:00:00Z',
        'user': dict({
          'handle': 'leeashley',
          'id': 1,
        }),
      }),
    ]),
    'user': dict({
      'handle': 'leeashley',
      'id': 1,
    }),
    'workflows': dict({
      'aodp': 'none',
      'nuvs': 'none',
      'pathoscope': 'none',
    }),
  })
# ---
# name: TestUploadReads.test[409]
  dict({
    'id': 'conflict',
    'message': 'Reads file name is already uploaded for this sample',
  })
# ---
# name: TestUploadReads.test_empty
  dict({
    'id': 'bad_request',
    'message': 'Reads file is empty',
  })
# ---
# name: TestUploadReads.test_uncompressed
  dict({
    'id': 'bad_request',
    'message': 'File is not compressed',
  })
# ---
